:sparkles: some styling and new endpoints
